--- a/customermgt-jpa/src/main/resources/application.properties
+++ b/customermgt-jpa/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.mvc.view.suffix = .jsp
 # = DATA SOURCE
 # ===============================
 spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
-spring.datasource.url = jdbc:hsqldb:mem:ecommercedb
-spring.datasource.username = tom
-spring.datasource.password=jerry
+spring.datasource.url = jdbc:hsqldb:mem:productsdb
+spring.datasource.username = xyz
+spring.datasource.password=xyz@99
 
 # ===============================
 # JPA / HIBERNATE / with hsql
