--- a/customermgt-jpa/src/main/resources/application.properties
+++ b/customermgt-jpa/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.mvc.view.suffix = .jsp
 # = DATA SOURCE
 # ===============================
 spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
-spring.datasource.url = jdbc:hsqldb:mem:productsdb
+spring.datasource.url = jdbc:hsqldb:mem:customersdb
 spring.datasource.username = xyz
 spring.datasource.password=xyz@99
 
