--- a/productmgtmongo/src/main/resources/application.properties
+++ b/productmgtmongo/src/main/resources/application.properties
@@ -4,4 +4,4 @@ server.port=8586
 # Local mongodb configuration.
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=inventorydb
+spring.data.mongodb.database=productdb
